# finance-advisor

./: app.py  config.py  config.yml  main.py  migration_plan.md  plan-tradingFinancialAgent.prompt.md  project_phase_implementation_plan.md  pyproject.toml  requirements.txt  test_chatbot_gemini.py  test_extract_gemini.py
data/: events.db  profiles.db  sessions.db  sessions.db-shm  sessions.db-wal  ui_threads.json
src/: __init__.py
src/agent/: __init__.py  graph.py  state.py
src/agents/: __init__.py  graph.py
src/agents/orchestrator/: __init__.py  factory.py
src/context/: __init__.py
src/context/memory/: __init__.py  factory.py
src/context/prompts/: __init__.py  factory.py
src/context/prompts/templates/: system_prompt.txt
src/guardrails/: __init__.py  domain_rules.py  input_validator.py  minor_advisory.py  output_validator.py
src/ingestion/: __init__.py
src/ingestion/parsers/: pdf_parser.py
src/memory/: events_store.py  profile_store.py
src/observability/logging/: __init__.py  factory.py
src/schemas/: events.py  profile.py  recommendation.py  spend_analysis.py  tool_calls.py  updates.py
src/tools/: __init__.py  pdf_ingestion_tool.py  registry.py
src/tools/schemas/: __init__.py  tool_definitions.py
