[tool.poetry]
name = "finance-advisor"
version = "0.1.0"
description = "AI-powered financial advisor for Indian investors using Google Gemini API and Google ADK"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.0"
pydantic = "^2.0"
google-genai = ">=2.8,<3"
google-adk = ">=2.3.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
langsmith = {extras = ["openai-agents"], version = ">=0.1.0"}
duckduckgo-search = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.0.285"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
